Revision history for Plerd

{{$NEXT}}

      - Fixing a UTF-8 encoding bug with stored webmentions.

1.820 2019-12-26T04:03:53Z

      - Adding SSL support to Plerdwatcher.
      
      - Displayed webmentions are now sorted by time they were published (versus the time they were received).
      
      - Adding a trivial default handler on the webmention listener.

      - Plerd now emits an intentional warning on publication if the blog contains tags that are identical except for case.
      
1.811 2019-05-27T04:24:16Z

      - Fixing a tag-ordering bug.

1.810 2019-05-26T22:22:27Z

      - Adding support for MultiMarkdown. Thanks to Petter Hassberg for the patch.
      
      - Tags now decide on their own capitalization, in the case of user inconsistency, and apply it across the blog.

1.802 2019-04-14T15:42:54Z

      - Suppressing extra whitespace from post methods (e.g. description()) whose output might use an HTML-stripped version of the post's body.

      - Removing redundant example-template files, and basing tests on plerdall's "init" feature instead.
      
      - Adding the contributors list to Plerd.pm's POD.
      
      - Removing documentation regarding Facebook support. (See: http://fogknife.com/2019-02-26-ending-my-personal-use-and-project-support-for-facebook.html)

1.801 2019-02-07T02:31:29Z

      - Adding a linked tag list to the default post template.

1.8 2019-02-07T01:11:35Z

      - Adding support for tags. Thanks to Joe Johnston for the basic concept, and much of the implementation work.
      
      - Adding a utc_date method to post objects.
      
      - Fixing a bug that made `plerdall --init` fail if plerdall can't find a config file. (Thanks to Bo for the bug report.)
      
      - Fixing a bug that ignored any user-requested webmention-listener log level.
      
      - Improving automatically derived post descriptions.

1.72 2018-12-09T16:51:27Z
