@@ -1,3 +1,3 @@
-title: A good source file
+title: A **good** source file
 
 This is a perfectly good and typical source file.
